--- a/cat-and-everything/public/css/style.css
+++ b/cat-and-everything/public/css/style.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&display=swap');
+@import url('https://fonts.cdnfonts.com/css/gagalin');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 .home {
-    background-color: #FFFAD7;
+    background-color: #fef2cf;
 }
 .page1{
     background-color: rgba(252,223,135,255);
@@ -98,4 +100,26 @@ box-shadow: -3px 6px 38px -6px rgba(38,14,38,1);
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+
+.rounded-sides-container {
+    border-radius: 50px;
+    overflow: hidden;
+    -webkit-box-shadow: 0px 3px 11px 5px rgba(166,164,165,1);
+    -moz-box-shadow: 0px 3px 11px 5px rgba(166,164,165,1);
+    box-shadow: 0px 3px 11px 5px rgba(166,164,165,1);
+}
+.rounded-sides {
+    background-color: #ffd2d2;
+    padding: 20px;
+}
+.card-title{
+    font-family: 'Gagalin', sans-serif;
+}
+.card-text{
+    font-family: 'Nunito Sans', sans-serif;
+}
+#adopt{
+    font-family: 'Roboto', sans-serif;
+
 }
