--- a/cat-and-everything/public/css/style.css
+++ b/cat-and-everything/public/css/style.css
@@ -158,4 +158,11 @@ box-shadow: -3px 6px 38px -6px rgba(38,14,38,1);
     /* background-color: #C9A7EB; */
     background-color: rgba(252,223,135,255);
 }
+#list{
+    background-color:#fef2cf;
+}
+#sign{
+    color: #302d2d;
+}
+
 
