--- a/cat-and-everything/public/css/style.css
+++ b/cat-and-everything/public/css/style.css
@@ -10,6 +10,7 @@ body {
 
 .home {
     background-color: #fef2cf;
+
 }
 .page1{
     background-color: rgba(252,223,135,255);
@@ -310,4 +311,47 @@ footer{
     -webkit-box-shadow: 0px 3px 11px 5px rgba(166,164,165,1);
     -moz-box-shadow: 0px 3px 11px 5px rgba(166,164,165,1);
     box-shadow: 0px 3px 11px 5px rgba(166,164,165,1);
+}
+/* ======HEADER======== */
+.parallax-header {
+    background-image: url('/images/homepage/CatAndEverything.png');
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    /* height: 400px; */
+  }
+  
+  .header-content {
+    text-align: center;
+    color: #fff;
+    padding-top: 200px;
+  }
+  
+  .header-content h1 {
+    font-size: 3em;
+  }
+  
+  .header-content p {
+    font-size: 1.5em;
+  }
+img {
+    height: 40px;
+    width: 50px;
+}
+
+/* ========CREATE FORUM FORM===== */
+form{
+    height: 400px;
+}  
+  .form-group label {
+    font-weight: bold;
+  }
+  
+  .btn-primary {
+    margin-top: 20px;
+  }
+.h1Forum{
+    margin-top: 40px;
 }
