--- a/cat-and-everything/public/css/style.css
+++ b/cat-and-everything/public/css/style.css
@@ -125,7 +125,7 @@ box-shadow: -3px 6px 38px -6px rgba(38,14,38,1);
     object-fit: contain;
 }
 
-.rounded-sides-container {
+.rounded-sides-container , #forumCards{
     display: flex;
     align-items: stretch;
     height: 100%;
@@ -312,34 +312,7 @@ footer{
     -moz-box-shadow: 0px 3px 11px 5px rgba(166,164,165,1);
     box-shadow: 0px 3px 11px 5px rgba(166,164,165,1);
 }
-/* ======HEADER======== */
-.parallax-header {
-    background-image: url('/images/homepage/CatAndEverything.png');
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    /* height: 400px; */
-  }
-  
-  .header-content {
-    text-align: center;
-    color: #fff;
-    padding-top: 200px;
-  }
-  
-  .header-content h1 {
-    font-size: 3em;
-  }
-  
-  .header-content p {
-    font-size: 1.5em;
-  }
-img {
-    height: 40px;
-    width: 50px;
-}
+
 
 /* ========CREATE FORUM FORM===== */
 form{
