--- a/cat-and-everything/public/css/style.css
+++ b/cat-and-everything/public/css/style.css
@@ -81,7 +81,6 @@ box-shadow: -3px 6px 38px -6px rgba(38,14,38,1);
     z-index: 100;
 }
 
-
 .nav-item {
     margin-right: 10px;
     color: #302d2d;
@@ -102,18 +101,13 @@ box-shadow: -3px 6px 38px -6px rgba(38,14,38,1);
     border-radius: 50px;
 }
 
-
-
-/* .nav-link {
-    color: #fff;
-} */
-
 /* Image homepage */
 .image-wrapper {
     position: relative;
     width: 100%;
     height: 0;
-    padding-bottom: 56.25%; /* Set the padding based on the aspect ratio of your image (e.g., 16:9 aspect ratio corresponds to 56.25%) */
+    padding-bottom: 56.25%; 
+    /* Set the padding based on the aspect ratio of your image (e.g., 16:9 aspect ratio corresponds to 56.25%) */
 }
 
 .image-wrapper img {
@@ -150,9 +144,6 @@ box-shadow: -3px 6px 38px -6px rgba(38,14,38,1);
 .card-text{
     font-family: 'Nunito Sans', sans-serif;
 }
-
-
-
 #adopt{
     font-family: 'Roboto', sans-serif;
 
