--- a/cat-and-everything/public/css/style.css
+++ b/cat-and-everything/public/css/style.css
@@ -353,3 +353,11 @@ form{
     width: 100%;
     height: 100%;
 }
+
+
+/* privacy */
+#privacy {
+    /* background-color: #ffd2d2; */
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
