--- a/cat-and-everything/public/css/style.css
+++ b/cat-and-everything/public/css/style.css
@@ -346,6 +346,7 @@ form{
     border-radius: 50%;
     overflow: hidden;
     margin-left: 90px;
+    /* padding-left: 30px; */
 }
 
 .circle-card img {
@@ -353,6 +354,7 @@ form{
     width: 100%;
     height: 100%;
 }
+
 
 
 /* privacy */
